--- a/myapp/main.yml
+++ b/myapp/main.yml
@@ -18,8 +18,8 @@ spec:
         app: myapp
     spec:
       containers:
-      - image: myapp
-        imagePullPolicy: Never
+      - image: ghcr.io/mollso/td2311-myapp:sha-902c9ec
+        imagePullPolicy: IfNotPresent
         name: myapp
         ports:
         - containerPort: 8080
