--- a/myapp/main.yml
+++ b/myapp/main.yml
@@ -24,6 +24,23 @@ spec:
         ports:
         - containerPort: 8080
         resources: {}
+				env:
+    		- name: IP
+      		valueFrom:
+        		fieldRef:
+          		fieldPath: status.podIP
+    		- name: POD
+      		valueFrom:
+        		fieldRef:
+          		fieldPath: metadata.name
+    		- name: NODE
+      		valueFrom:
+        		fieldRef:
+          		fieldPath: spec.nodeName
+    		- name: NAMESPACE
+      		valueFrom:
+        		fieldRef:
+          		fieldPath: metadata.namespace
 status: {}
 ---
 apiVersion: v1
